# kodu-optim

./: .gitignore  pyproject.toml  test_sync_run.py
dobu_manager/: app.py  config.py  example_config.yaml  main.py
dobu_manager/controllers/: __init__.py  optuna_controller.py  study_controller.py
dobu_manager/repositories/: node_repository.py  study_repository.py
dobu_manager/routes/: __init__.py  delete_node.py  logs.py  node_ping.py  register_node.py  study.py
dobu_manager/services/: codebase_service.py  study_service.py
executor/: main.py  requests.py  rest_storage.py
koko_worker/: cluster.py  config.py  download.py  environment.py  example_config.json  executor.py  main.py  pinger.py  requests.py
shared/models/: node.py  optuna.py  study.py
