[project]
name = "kodu-optim"
version = "0.1.0"
description = "A distributed optimization package"
readme = "README.md"
authors = [
    { name = "Vincent Verbergt", email = "vincent.verbergt@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "filelock>=3.18.0",
    "loguru>=0.7.3",
    "psutil>=7.0.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "tinydb>=4.8.2",
]

[project.scripts]
orchestrator = "dobu_manager.main:main"
worker = "koko_worker.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dobu_manager", "koko_worker"]

[dependency-groups]
dev = [
    "wheel>=0.45.1",
]
